--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,48 @@
     <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-<h1>Login Form</h1>
-<form id="loginForm">
-    <div class='labeled'>
-        <input type="text" id="username" required placeholder ="Enter your name"/>
 
+<div class="main-container">
+    <div class="forms-container">
+        <!-- Login Form -->
+        <form id="loginForm">
+            <div class='labeled'>
+                <h1>Login</h1>
+                <input type="text" id="username" required placeholder="Enter your name"/>
+            </div>
+            <div class='labeled'>
+                <input type="password" id="password"
+                       required
+                       placeholder="Enter your password"
+                       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                       title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" />
+            </div>
+            <button class="btn btn-primary btn-block login-button" type="submit"><i class="fa fa-sign-in"></i> Login</button>
+        </form>
+
+        <!-- Signup Form -->
+        <form id="SignupForm">
+            <div class='labeled'>
+                <h1>Sign Up</h1>
+                <input type="text" id="name" required placeholder="Enter your name"/>
+            </div>
+            <div class='labeled'>
+                <input type="password" id="pass"
+                       required
+                       placeholder="Enter your password"
+                       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                       title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" />
+            </div>
+            <button class="btn btn-primary btn-block login-button" type="submit"><i class="fa fa-sign-in"></i> Sign up</button>
+        </form>
     </div>
-    <div class='labeled'>
-        <input type="password" id="password"
-               required
-               placeholder="Enter your password"
-               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-               title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" />
 
+    <div class="toggle-buttons">
+        <button id="showLoginForm" class="btn btn-secondary">Login</button>
+        <button id="showSignupForm" class="btn btn-secondary">Sign Up</button>
     </div>
+</div>
 
-    <button class="btn btn-primary btn-block login-button" type="submit"><i class="fa fa-sign-in"></i> Login</button>
-</form>
 <script src="login.js"></script>
 </body>
 </html>
